--- a/.github/workflows/repoman.yml
+++ b/.github/workflows/repoman.yml
@@ -24,18 +24,6 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
       
-      - name: action-repoman
-        # You may pin to the exact commit or the version.
-        # uses: hacking-gentoo/action-repoman@74f6642bfcf4cf49add44956751351343930e5af
+      - name: repoman
         uses: hacking-gentoo/action-repoman@v1.0.0
